--- a/kubernetes/mongodb.yaml
+++ b/kubernetes/mongodb.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: mongo
-          image: mongo
+          image: mongo:4.4.18
           ports:
             - containerPort: 27017
           volumeMounts:
